--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <div class="col-lg-12 mr-auto text-center">
                     <i class="fas fa-envelope fa-3x mb-3 sr-contact-2"></i>
                     <p>
-                        <a href="mailto:ai-veg-idea@gmail.com">ai-veg-idea@gmail.com</a>
+                        <a href="mailto:ai.agri.idea@gmail.com">ai.agri.idea@gmail.com</a>
                     </p>
                 </div>
             </div>
