--- a/map.html
+++ b/map.html
@@ -133,11 +133,15 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col text-center ml-2">需求數量:<span id="sellNum">??</span><small>粒</small></div>
+                        <div class="col text-center ml-2">
+                            需求量<span id="sellNum">??</span><small>粒</small>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col text-center ml-2">批發價格:<span id="sellPrice" style="color:red;font-size:1.4em"
-                                class="font-weight-bold">??</span><span style="font-size: 0.5em"> 元/粒</span></div>
+                        <div class="col text-center ml-2">
+                            批發價<span id="sellPrice" style="color:red;font-size:1.4em" class="font-weight-bold">??</span><span style="font-size: 0.5em"> 元/粒</span>
+                            
+                            </div>
                     </div>
                 </div>
                 <div class="col-4">
@@ -147,10 +151,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col ml-2 text-center">可零售量:<span id="stock">??</span><small>粒</small></div>
+                        <div class="col ml-2 text-center">可寄賣<span id="stock">??</span><small>粒</small></div>
                     </div>
                     <div class="row">
-                        <div class="col ml-2 text-center">熱售價格<span id="storePrice" style="color:red;font-size:1.4em"
+                        <div class="col ml-2 text-center">熱售價<span id="storePrice" style="color:red;font-size:1.4em"
                                 class="font-weight-bold">??</span><span style="font-size: 0.5em"> 元/粒</span></div>
                     </div>
 
