--- a/map.html
+++ b/map.html
@@ -235,38 +235,38 @@
             var map;
             var marker = [];
             var icons = [
-                { req: 75, label: 42, lat: 24.115808, lng: 120.679783, scale: 42, fillColor: 'red', name: '石二鍋', subname: '大里大買家店', id: '1' },
-                { req: 40, label: 35, lat: 24.148000, lng: 120.702431, scale: 24, fillColor: 'black', name: '石二鍋', subname: '太平中山店', id: '2' },
-                { req: 60, label: 38, lat: 24.152721, lng: 120.682259, scale: 30, fillColor: 'black', name: '石二鍋', subname: '台中中華店', id: '3' },
-                { req: 35, label: 35, lat: 24.190302, lng: 120.612071, scale: 22, fillColor: 'black', name: '石二鍋', subname: '台中西屯玉門店', id: '4' },
-                { req: 5, label: 30, lat: 24.174529, lng: 120.648149, scale: 15, fillColor: 'green', name: '石二鍋', subname: '台中河南店', id: '5' },
-                { req: 51, label: 37, lat: 24.153930, lng: 120.646406, scale: 28, fillColor: 'black', name: '石二鍋', subname: '台中家樂福文心店', id: '6' },
-                { req: 35, label: 35, lat: 24.147110, lng: 120.636191, scale: 20, fillColor: 'black', name: '石二鍋', subname: '台中黎明店', id: '7' },
-                { req: 45, label: 36, lat: 24.114954, lng: 120.667008, scale: 24, fillColor: 'black', name: '石二鍋', subname: '台中美村南店', id: '8' },
-                { req: 34, label: 34, lat: 24.266646, lng: 120.574350, scale: 20, fillColor: 'black', name: '石二鍋', subname: '清水中山店', id: '9' },
-                { req: 18, label: 33, lat: 24.252062, lng: 120.715594, scale: 20, fillColor: 'black', name: '石二鍋', subname: '豐原源豐店', id: '10' },
-                { req: 33, label: 33, lat: 24.164876, lng: 120.66048, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中漢口店', id: '11' },
-                { req: 25, label: 33, lat: 24.0909523, lng: 120.7034369, scale: 20, fillColor: 'black', name: '老先覺', subname: '大里成功店', id: '12' },
-                { req: 27, label: 33, lat: 24.229834, lng: 120.572573, scale: 20, fillColor: 'black', name: '老先覺', subname: '沙鹿靜宜店', id: '13' },
-                { req: 15, label: 33, lat: 24.1874587, lng: 120.6204478, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中福雅店', id: '14' },
-                { req: 19, label: 33, lat: 24.0636931, lng: 120.6971116, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中霧峰店', id: '15' },
-                { req: 20, label: 33, lat: 24.115094, lng: 120.688271, scale: 20, fillColor: 'black', name: '老先覺', subname: '大里大明店', id: '16' },
-                { req: 30, label: 33, lat: 24.2735925, lng: 120.5696553, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中清水店', id: '17' },
-                { req: 17, label: 33, lat: 24.1137346, lng: 120.6655087, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中高工店', id: '18' },
-                { req: 33, label: 33, lat: 24.2579708, lng: 120.6649976, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中神岡店', id: '19' },
-                { req: 21, label: 33, lat: 24.2460412, lng: 120.5281808, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中梧棲店', id: '20' },
-                { req: 33, label: 33, lat: 24.1723679, lng: 120.637263, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中朝馬店', id: '21' },
-                { req: 28, label: 33, lat: 24.2068407, lng: 120.708576, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中潭子店', id: '22' },
-                { req: 33, label: 33, lat: 24.1760787, lng: 120.7254003, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中東山店', id: '23' },
-                { req: 19, label: 33, lat: 24.2266233, lng: 120.6480127, scale: 20, fillColor: 'black', name: '老先覺', subname: '大雅民生店', id: '24' },
-                { req: 33, label: 33, lat: 24.1518631, lng: 120.546021, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中大肚店', id: '25' },
-                { req: 10, label: 33, lat: 24.172972, lng: 120.687697, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中熱河店', id: '26' },
-                { req: 35, label: 33, lat: 24.151928, lng: 120.615458, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中忠勇店', id: '27' },
-                { req: 20, label: 33, lat: 24.1847124, lng: 120.5849242, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中龍井店', id: '28' },
-                { req: 24, label: 33, lat: 24.2519517, lng: 120.8299432, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中東勢店', id: '29' },
-                { req: 40, label: 33, lat: 24.2511877, lng: 120.7060667, scale: 24, fillColor: 'black', name: '老先覺', subname: '豐原成功店', id: '30' },
-                { req: 13, label: 33, lat: 24.1267125, lng: 120.71139, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中太平店', id: '31' },
-                { req: 30, label: 33, lat: 24.3481407, lng: 120.6198094, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中大甲店', id: '32' },
+                { req: 75, rPrice: 32, lat: 24.115808, lng: 120.679783, scale: 42, fillColor: 'red', name: '石二鍋', subname: '大里大買家店', id: '1' },
+                { req: 40, rPrice: 25, lat: 24.148000, lng: 120.702431, scale: 24, fillColor: 'black', name: '石二鍋', subname: '太平中山店', id: '2' },
+                { req: 60, rPrice: 28, lat: 24.152721, lng: 120.682259, scale: 30, fillColor: 'black', name: '石二鍋', subname: '台中中華店', id: '3' },
+                { req: 35, rPrice: 25, lat: 24.190302, lng: 120.612071, scale: 22, fillColor: 'black', name: '石二鍋', subname: '台中西屯玉門店', id: '4' },
+                { req: 5, rPrice: 25, lat: 24.174529, lng: 120.648149, scale: 15, fillColor: 'green', name: '石二鍋', subname: '台中河南店', id: '5' },
+                { req: 51, rPrice: 27, lat: 24.153930, lng: 120.646406, scale: 28, fillColor: 'black', name: '石二鍋', subname: '台中家樂福文心店', id: '6' },
+                { req: 35, rPrice: 25, lat: 24.147110, lng: 120.636191, scale: 20, fillColor: 'black', name: '石二鍋', subname: '台中黎明店', id: '7' },
+                { req: 45, rPrice: 26, lat: 24.114954, lng: 120.667008, scale: 24, fillColor: 'black', name: '石二鍋', subname: '台中美村南店', id: '8' },
+                { req: 34, rPrice: 24, lat: 24.266646, lng: 120.574350, scale: 20, fillColor: 'black', name: '石二鍋', subname: '清水中山店', id: '9' },
+                { req: 18, rPrice: 23, lat: 24.252062, lng: 120.715594, scale: 20, fillColor: 'black', name: '石二鍋', subname: '豐原源豐店', id: '10' },
+                { req: 23, rPrice: 23, lat: 24.164876, lng: 120.66048, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中漢口店', id: '11' },
+                { req: 25, rPrice: 23, lat: 24.0909523, lng: 120.7034369, scale: 20, fillColor: 'black', name: '老先覺', subname: '大里成功店', id: '12' },
+                { req: 27, rPrice: 23, lat: 24.229834, lng: 120.572573, scale: 20, fillColor: 'black', name: '老先覺', subname: '沙鹿靜宜店', id: '13' },
+                { req: 15, rPrice: 23, lat: 24.1874587, lng: 120.6204478, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中福雅店', id: '14' },
+                { req: 19, rPrice: 23, lat: 24.0636931, lng: 120.6971116, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中霧峰店', id: '15' },
+                { req: 20, rPrice: 23, lat: 24.115094, lng: 120.688271, scale: 20, fillColor: 'black', name: '老先覺', subname: '大里大明店', id: '16' },
+                { req: 30, rPrice: 23, lat: 24.2735925, lng: 120.5696553, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中清水店', id: '17' },
+                { req: 17, rPrice: 23, lat: 24.1137346, lng: 120.6655087, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中高工店', id: '18' },
+                { req: 23, rPrice: 23, lat: 24.2579708, lng: 120.6649976, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中神岡店', id: '19' },
+                { req: 21, rPrice: 23, lat: 24.2460412, lng: 120.5281808, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中梧棲店', id: '20' },
+                { req: 23, rPrice: 23, lat: 24.1723679, lng: 120.637263, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中朝馬店', id: '21' },
+                { req: 28, rPrice: 23, lat: 24.2068407, lng: 120.708576, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中潭子店', id: '22' },
+                { req: 23, rPrice: 23, lat: 24.1760787, lng: 120.7254003, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中東山店', id: '23' },
+                { req: 19, rPrice: 23, lat: 24.2266223, lng: 120.6480127, scale: 20, fillColor: 'black', name: '老先覺', subname: '大雅民生店', id: '24' },
+                { req: 23, rPrice: 23, lat: 24.1518631, lng: 120.546021, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中大肚店', id: '25' },
+                { req: 10, rPrice: 23, lat: 24.172972, lng: 120.687697, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中熱河店', id: '26' },
+                { req: 35, rPrice: 23, lat: 24.151928, lng: 120.615458, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中忠勇店', id: '27' },
+                { req: 20, rPrice: 23, lat: 24.1847124, lng: 120.5849242, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中龍井店', id: '28' },
+                { req: 24, rPrice: 23, lat: 24.2519517, lng: 120.8299432, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中東勢店', id: '29' },
+                { req: 40, rPrice: 23, lat: 24.2511877, lng: 120.7060667, scale: 24, fillColor: 'black', name: '老先覺', subname: '豐原成功店', id: '30' },
+                { req: 13, rPrice: 23, lat: 24.1267125, lng: 120.71139, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中太平店', id: '31' },
+                { req: 30, rPrice: 23, lat: 24.3481407, lng: 120.6198094, scale: 20, fillColor: 'black', name: '老先覺', subname: '台中大甲店', id: '32' },
             ];
             map = new google.maps.Map(document.getElementById('map'), {
                 center: { lat: 24.169212, lng: 120.643101 },
@@ -351,8 +351,8 @@
                         document.getElementById('storeName').textContent = "";
                         document.getElementById('storeNameSelect1').textContent = icons[e].name;
                         document.getElementById('storeNameSelect2').textContent = icons[e].subname;
-                        document.getElementById('storePrice').textContent = icons[e].label.toString();
-                        document.getElementById('sellPrice').textContent = (icons[e].label + (Math.floor(Math.random() * 4)) - 4).toString();
+                        document.getElementById('storePrice').textContent = icons[e].rPrice.toString();
+                        document.getElementById('sellPrice').textContent = (icons[e].rPrice + (Math.floor(Math.random() * 4)) - 4).toString();
 
                     })
                     // marker[e].setLabel({
