--- a/index.html
+++ b/index.html
@@ -115,22 +115,22 @@
             <div class="row justify-content-between">
                 <!-- <div class="col-lg-1"></div> -->
                 <div class="col-lg-4 text-center mb-5">
-                    <img src="img/portfolio/fullsize/7.jpg" width="200px" height="200px" class="img-fluid rounded-circle">
+                    <img src="img/team/1.jpg" width="200px" height="200px" class="img-fluid rounded-circle">
                     <h3>羅維伸</h3>
                     <p>大數據分析</p>
                 </div>
                 <div class="col-lg-4 text-center mb-5">
-                    <img src="img/portfolio/fullsize/7.jpg" width="200px" height="200px" class="img-fluid rounded-circle">
+                    <img src="img/team/2.jpg" width="200px" height="200px" class="img-fluid rounded-circle">
                     <h3>陳建瑋</h3>
                     <p>農場經營管理、市場行銷</p>
                 </div>
                 <div class="col-lg-4 text-center mb-5">
-                    <img src="img/portfolio/fullsize/7.jpg" width="200px" height="200px" class="img-fluid rounded-circle">
+                    <img src="img/team/3.jpg" width="200px" height="200px" class="img-fluid rounded-circle">
                     <h3>蔡侑翰</h3>
                     <p>生產履歷、資料探勘</p>
                 </div>
                 <div class="col-lg-4 text-center mb-5">
-                    <img src="img/portfolio/fullsize/7.jpg" width="200px" height="200px" class="img-fluid rounded-circle">
+                    <img src="img/team/4.jpg" width="200px" height="200px" class="img-fluid rounded-circle">
                     <h3>勞宏斌</h3>
                     <p>Reinforced-Learning (RL) 分析</p>
                 </div>
